
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = cronmon/_version.py
versionfile_build = cronmon/_version.py
tag_prefix =
parentdir_prefix = cronmon-

[metadata]
description-file = README.md
